We generally use gap to enforce spacing so to avoid double space I am removing the margin-bottom

--- a/kpm/kpm-frontend/src/components/filter.scss
+++ b/kpm/kpm-frontend/src/components/filter.scss
@@ -7,7 +7,6 @@
   // font-size: 1.17em;
   // font-weight: bold;
   border-bottom: 1px solid var(--kpmPaneSepatorFg);
-  margin-bottom: var(--kpmMargin);
   width: 100%;
 
   & > ul {
